[gd_scene load_steps=14 format=3 uid="uid://h1euld2qohrv"]

[ext_resource type="Script" path="res://general/scripts/actor_player.gd" id="1_xm6wn"]
[ext_resource type="FontFile" uid="uid://cs8850q2te7fk" path="res://menus/Font/ThaleahFat.ttf" id="3_k0wqs"]
[ext_resource type="PackedScene" uid="uid://c6hlqk4ebdk" path="res://general/scenes/bullet_emitter.tscn" id="3_uebj2"]
[ext_resource type="Script" path="res://general/scripts/player_hud_score.gd" id="4_7hk7a"]
[ext_resource type="Texture2D" uid="uid://bmunbprqa4k34" path="res://general/sprites/player_frame_1.png" id="4_lsrsl"]
[ext_resource type="Texture2D" uid="uid://mk7q0trey33r" path="res://general/sprites/player_frame_2.png" id="5_4cir8"]
[ext_resource type="Script" path="res://general/scripts/Health_HUD.gd" id="7_o74it"]
[ext_resource type="Texture2D" uid="uid://cehh5dy4sa3mx" path="res://general/sprites/heart_filled.png" id="8_dlwhf"]
[ext_resource type="Texture2D" uid="uid://dt8wakvuqio16" path="res://general/sprites/heart_empty.png" id="9_behyi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vn0ym"]
radius = 8.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cf18k"]
size = Vector2(10, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_1hklf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_lsrsl")
}, {
"duration": 1.0,
"texture": ExtResource("5_4cir8")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dqa1q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_dlwhf")
}, {
"duration": 1.0,
"texture": ExtResource("9_behyi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -14)
collision_layer = 0
script = ExtResource("1_xm6wn")

[node name="Area2D" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_vn0ym")

[node name="EnvironmentalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_cf18k")

[node name="BulletEmitter" parent="." instance=ExtResource("3_uebj2")]

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_1hklf")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)

[node name="Score" type="Label" parent="Camera2D"]
texture_filter = 1
offset_left = 53.0
offset_top = -88.0
offset_right = 158.0
offset_bottom = -73.0
theme_override_fonts/font = ExtResource("3_k0wqs")
text = "azdvz"
horizontal_alignment = 2
script = ExtResource("4_7hk7a")

[node name="Health_HUD" type="Node2D" parent="Camera2D"]
script = ExtResource("7_o74it")

[node name="heart_1" type="AnimatedSprite2D" parent="Camera2D/Health_HUD"]
z_index = 100
position = Vector2(-149, -79)
sprite_frames = SubResource("SpriteFrames_dqa1q")

[node name="heart_2" type="AnimatedSprite2D" parent="Camera2D/Health_HUD"]
z_index = 100
position = Vector2(-131, -79)
sprite_frames = SubResource("SpriteFrames_dqa1q")

[node name="heart_3" type="AnimatedSprite2D" parent="Camera2D/Health_HUD"]
z_index = 100
position = Vector2(-113, -79)
sprite_frames = SubResource("SpriteFrames_dqa1q")

[node name="heart_4" type="AnimatedSprite2D" parent="Camera2D/Health_HUD"]
z_index = 100
position = Vector2(-95, -79)
sprite_frames = SubResource("SpriteFrames_dqa1q")

[node name="heart_5" type="AnimatedSprite2D" parent="Camera2D/Health_HUD"]
z_index = 100
position = Vector2(-77, -79)
sprite_frames = SubResource("SpriteFrames_dqa1q")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
